# multi-agent-travel-planner

./: .gitignore  LICENSE  README.md  output.doc  test001.py
multi_agent/: .env.example  README.md  arranger.py  food_accomodation_output.json  main.py  optimized_route.json  places_output.json  requirements.txt  researcher_output.json  test002.py  user_input.py
multi_agent/agents/: food_accomodation_agent.py  researcher_agent.py  transport_time_agent.py
multi_agent/core/: agent_llm.py  json_toon.py
multi_agent/crews/: food_accomodation_crews.py  researcher_crews.py  transport_time_crews.py
multi_agent/tasks/: food_accomodation_task.py  researcher_task.py  transport_time_task.py
travel_planner/: README.md  pyproject.toml  report.md
travel_planner/src/travel_planner/: crew.py  main.py
travel_planner/src/travel_planner/config/: user_input.yaml
