[project]
name = "travel_planner"
version = "0.1.0"
description = "travel_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "litellm>=1.75.3",
]

[project.scripts]
travel_planner = "travel_planner.main:run"
run_crew = "travel_planner.main:run"
train = "travel_planner.main:train"
replay = "travel_planner.main:replay"
test = "travel_planner.main:test"
run_with_trigger = "travel_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
